src/test/ui/inference/cannot-infer-async.stderr
error[E0282]: type annotations needed
  --> $DIR/cannot-infer-async.rs:13:9
   |
LL |     let fut = async {
   |         --- consider giving `fut` a type
...
LL |         Ok(())
   |         ^^ cannot infer type for type parameter `E` declared on the enum `Result`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
